--- a/wildcatweb/src/features/commandPanel/styles/FunctionDefault.module.css
+++ b/wildcatweb/src/features/commandPanel/styles/FunctionDefault.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    overflow-y: hidden;
     /* border: var(--border-width-standard) solid var(--panel-border);
     border-radius: var(--radius-md); */
     background-color: var(--panel-bg);
